--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ a:hover {
   color: #4bd2ff;
 }
 
-/*conf menu*/
+
 
 body {
   font-family: 'Rubik', sans-serif;
@@ -44,6 +44,8 @@ body::-webkit-scrollbar-thumb{
   background: var(--text-primary);
 }
 
+/*conf menu*/
+
 main {
   padding: 1rem;
 }
@@ -55,11 +57,22 @@ main {
   justify-content: center;
 }
 
+.menu-responsive {
+  width: 50px;
+  display: none;
+}
 
+h1 {
+  color: var(--text-secondary);
+}
+
+h1:hover {
+  color:var(--text-primary);
+}
 
 .logo {
   width: 100px;
-  margin-right: 500px;
+  margin-right: 35%;
 }
 
 .navbar-nav {
@@ -97,9 +110,6 @@ main {
   background-color: var(--text-primary);
 }
 
-
-/*tarjetas */
-
 header {
 margin: 0;
 padding: 0;
@@ -126,7 +136,6 @@ section {
 
 }
 
-
 img{
   width: 100%;
 }
@@ -137,6 +146,8 @@ h2 {
 section a {
   color: #000000;
 }
+
+/*tarjetas */
 
 .card-container {
   display: flex;
@@ -182,29 +193,41 @@ section a {
 }
 
 
-/* Clientes premiun y reserva*/
+/* jumbotron y container*/
+
+.jumbotron {
+  justify-content: center;
+  display: flex;
+  background-color: var(--bg-secondary);
+  color: var(--text-primary);
+  font-family: 'Rubik', sans-serif;
+  padding-bottom: 1%;
+  padding-top: 1%;
+}
+.present {
+  width: 700px;
+}
+
+.texto-der {
+  margin: 2rem;
+  font-family: 'Rubik', sans-serif;
+  max-width: 300px;
+}
+
 
 .container-a {
   justify-content: center;
   display: flex;
   background-color: var(--bg-secondary);
   color: var(--text-primary);
-  font-family: Rubik;
+  font-family: 'Rubik', sans-serif;
 }
+
 .container-a img {
   margin-top: 10px;
   max-width: 600px;
-}
-.container-b {
-  justify-content: center;
-  display: flex;
-  background-color: var(--bg-secondary);
-  color: var(--text-primary);
-  font-family: Rubik;
-
-}
-.present {
-  width: 700px;
+  padding-bottom: 1%;
+  padding-top: 1%;
 }
 
 .texto-izq {
@@ -286,7 +309,6 @@ footer a{
   margin: 0 auto;
   padding: 0 15px;
   overflow: auto;
-  justify-content: cente;
   text-align: center;
   display: flex;
   flex: auto;
@@ -330,15 +352,68 @@ footer a{
 
 @media screen and (max-width:600px) {
 
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .footer-column {
   margin: 0;
-  padding: 5%;
 }
+
 .present {
-  width: 400px;
+  width: 360px;
 }
+
 .gato-logo {
-  width: 400px;
+  width: 200px;
 }
+
+.jumbotron {
+  display:block;
+}
+
+.texto-der {
+  padding-top: 2%;
+  padding-left: 10%;
+}
+
+.texto-der {
+  padding-left: 10%;
+}
+
+.container-a {
+  display: block;
+}
+
+footer {
+  font-size: 10px;
+}
+.nav-logo {
+  align-items: center;
+}
+
+.nav-item {
+  display: none;
+}
+
+.navbar {
+  align-items: center;
+}
+
+.logo {
+  width: 100px;
+  margin-right: 0;
+}
+
+.menu-responsive {
+  display:var(--text-primary);
+  margin-left: 100px;
+}
+
+
+
+
 
 }
